# purple-ai-sandbox

./: .gitignore  CAPABILITY_DROPPING_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  COMPLETED_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_IMPLEMENTATION_ANALYSIS.md  Cargo.toml  LICENSE  PRODUCTION_DEPLOYMENT.md  PROFESSIONAL_SETUP.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_PLAN.md  TESTING_REPORT.md  TEST_RESULTS_SUMMARY.md  crates.js  help.html  rust-toolchain.toml  settings.html  src-files.js  test_all_profiles.sh  test_real_world.sh
ebpf-probes/: Cargo.toml
ebpf-probes/src/: file.bpf.rs  file.rs  network.bpf.rs  network.rs  network_filter.bpf.rs  syscall.bpf.rs  syscall.rs
purple/: Cargo.toml  all.html  build.rs  fn.execute_via_manager.html  fn.main.html  fn.validate_profile_name.html  index.html  macro.filesystem_log!.html  macro.filesystem_log.html  macro.network_log!.html  macro.network_log.html  macro.policy_log!.html  macro.policy_log.html  macro.sandbox_log!.html  macro.sandbox_log.html  macro.security_log!.html  macro.security_log.html  sidebar-items.js
purple/ai/: fn.default_true.html  index.html  sidebar-items.js  struct.AIPolicies.html  struct.BudgetConfig.html  struct.LLMAPIConfig.html  struct.MonitoringConfig.html  struct.ProviderConfig.html  struct.RateLimits.html  struct.SecurityConfig.html
purple/ai/api_monitor/: index.html  sidebar-items.js  struct.APICall.html  struct.AnthropicResponse.html  struct.AnthropicUsage.html  struct.LLMAPIMonitor.html  struct.OpenAIResponse.html  struct.OpenAIUsage.html  struct.UsageStats.html
purple/ai/budget/: enum.BudgetExceeded.html  index.html  sidebar-items.js  struct.Budget.html  struct.BudgetEnforcer.html  struct.BudgetUsage.html
purple/ai/cost/: index.html  sidebar-items.js  static.PRICING.html  struct.CostCalculator.html  struct.ModelPricing.html
purple/cli/: enum.Commands.html  enum.CorrelationCommands.html  enum.ProfileCommands.html  enum.RuleCommands.html  enum.SandboxAction.html  index.html  sidebar-items.js  struct.AuditArgs.html  struct.Cli.html  struct.MonitorArgs.html  struct.ReplayArgs.html  struct.RunArgs.html
purple/correlation/: constant.CORRELATION_VERSION.html  index.html  sidebar-items.js  struct.DefaultCorrelationConfig.html
purple/correlation/api/: fn.create_router.html  fn.start_api.html  index.html  sidebar-items.js  struct.ApiState.html  struct.CreateSessionRequest.html  struct.CreateSessionResponse.html  struct.DeleteResponse.html  struct.RegisterIntentRequest.html  struct.SessionSummary.html  struct.SubmitEventRequest.html
purple/correlation/cli/: index.html
purple/correlation/engine/: index.html  sidebar-items.js  struct.BehavioralBaseline.html  struct.CorrelationEngine.html  struct.DriftIndicator.html  struct.PatternDetector.html  struct.SequenceAnalyzer.html  struct.SequenceViolation.html
purple/correlation/enrichment/: enum.IndicatorOfCompromise.html  enum.IocType.html  fn.extract_after_delimiter.html  fn.extract_after_prefix.html  fn.extract_first_part.html  fn.extract_u64_after.html  index.html  sidebar-items.js  struct.AttackMappingService.html  struct.AttackTechnique.html  struct.EventEnricher.html  struct.SeverityClassifier.html  struct.ThreatIndicator.html  struct.ThreatIntelligenceService.html
purple/correlation/models/: enum.AnomalyType.html  enum.ConditionOperator.html  enum.EventCategory.html  enum.RecommendedAction.html  enum.RiskLevel.html  enum.RuleAction.html  enum.SessionStatus.html  enum.Severity.html  fn.duration_ago.html  fn.now_timestamp.html  index.html  sidebar-items.js  struct.Anomaly.html  struct.AnomalyDetectionConfig.html  struct.BehavioralFeatures.html  struct.CorrelationConfig.html  struct.CorrelationSession.html  struct.DetectedPattern.html  struct.DetectionRule.html  struct.EnrichedEvent.html  struct.Evidence.html  struct.LlmIntent.html  struct.OcsfActor.html  struct.OcsfEvent.html  struct.OcsfFile.html  struct.OcsfNetwork.html  struct.OcsfTarget.html  struct.RawEvent.html  struct.RiskFactor.html  struct.RiskScoreBreakdown.html  struct.RiskScoringConfig.html  struct.RuleCondition.html  struct.RulesConfig.html  struct.StorageConfig.html  struct.ThreatIntelSource.html  struct.ThreatIntelligenceConfig.html  type.EventId.html  type.IntentId.html  type.RiskScore.html  type.SessionId.html
purple/correlation/rules/: enum.CompiledCondition.html  fn.get_builtin_rules.html  index.html  sidebar-items.js  struct.CompiledRule.html  struct.RuleMatch.html  struct.RulesEngine.html  struct.SigmaDetection.html  struct.SigmaLogSource.html  struct.SigmaRule.html
purple/correlation/storage/: fn.json_to_string.html  fn.string_to_json.html  index.html  sidebar-items.js  struct.MemoryStorage.html  struct.SledCorrelationStorage.html  trait.CorrelationStorageTrait.html
purple/error/: enum.PurpleError.html  index.html  sidebar-items.js  struct.EnhancedError.html  type.Result.html
purple/logging/: enum.LogLevel.html  fn.init_logging.html  index.html  sidebar-items.js
purple/policy/: enum.ConditionOp.html  enum.SyscallAction.html  index.html  sidebar-items.js  struct.AdvancedSyscallRule.html  struct.AuditPolicy.html  struct.CapabilityPolicy.html  struct.EbpfMonitoringPolicy.html  struct.FilesystemPolicy.html  struct.NetworkPolicy.html  struct.PathMapping.html  struct.Policy.html  struct.ResourcePolicy.html  struct.SyscallCondition.html  struct.SyscallPolicy.html
purple/policy/compiler/: constant.FORBIDDEN_HOST_PATHS.html  constant.FORBIDDEN_HOST_PREFIXES.html  enum.CompiledComparison.html  fn.parse_io_rate.html  fn.parse_memory_size.html  fn.parse_port.html  fn.parse_size_with_suffix.html  fn.validate_path.html  fn.validate_sandbox_path.html  index.html  sidebar-items.js  struct.CompiledAdvancedSyscallRule.html  struct.CompiledAuditPolicy.html  (+7 more)
purple/sandbox/: fn.capability_from_name.html  fn.prctl_set_no_new_privs.html  fn.setup_parent_signal_handlers.html  fn.shutdown_requested.html  index.html  sidebar-items.js  static.SHUTDOWN_REQUESTED.html  struct.Sandbox.html
purple/src/: cli.rs  error.rs  main.rs
(+2019 files in other folders)
