[package]
name = "purple"
version = "0.1.0"
edition = "2024"
authors = ["Purple AI Sandbox Team <team@purple-sandbox.io>"]
description = "Secure, isolated execution environment for AI agents with comprehensive sandboxing"
homepage = "https://github.com/your-org/purple"
repository = "https://github.com/your-org/purple"
readme = "README.md"
license = "MIT"
keywords = ["sandbox", "security", "ai", "isolation", "container"]
categories = ["security", "virtualization", "os"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
nix = { version = "0.30.1", features = ["sched", "user", "mount", "fs"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.0", features = ["v4"] }
libseccomp = "0.2.0"
cgroups-rs = "0.3.0"
caps = "0.5"
libc = "0.2"


[dev-dependencies]
tempfile = "3.10.0"

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", exactly=1},
    {file="CHANGELOG.md", search="\\d{4}-\\d{2}-\\d{2}", replace="{{date}}", exactly=1},
    {file="Cargo.toml", search="version = \"0.1.0\"", replace="version = \"{{version}}\"", exactly=1},
]

[package.metadata.publish]
registry = "crates-io"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true
