[workspace]
members = [
    "purple",
]
# Note: ebpf-probes is NOT a workspace member - it's compiled by aya-build
# during the purple crate's build.rs when the "ebpf" feature is enabled
resolver = "2"

[workspace.dependencies]
# Core dependencies
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
nix = { version = "0.30.1", features = ["sched", "user", "mount", "fs", "socket", "net"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
libseccomp = "0.2.0"
cgroups-rs = "0.3.0"
caps = "0.5"
libc = "0.2"

# Network dependencies
hyper = { version = "1.4.0", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5.2", features = ["trace", "cors", "add-extension"] }
http = "1.1.0"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.3", features = ["tokio"] }
regex = "1.10.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# eBPF dependencies (userspace)
aya = "0.13"
aya-log = "0.2"
# Note: aya-ebpf and aya-log-ebpf are used by ebpf-probes crate which is
# compiled separately during build.rs when the "ebpf" feature is enabled

# Test dependencies
tempfile = "3.10.0"